# EduChainProject

./: .gitignore  CMakeLists.txt  Documentatie_prezentare_EduChain_POO.docx  README.md  educhain.db  schema.sql
app/: client_main.cpp  server_main.cpp
gui/: AdminDashboard.cpp  AdminDashboard.h  AdminDashboard.ui  ApplicationContext.cpp  ApplicationContext.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProfessorDashboard.cpp  ProfessorDashboard.h  ProfessorDashboard.ui  RegisterWindow.cpp  RegisterWindow.h  RegisterWindow.ui  StudentDashboard.cpp  StudentDashboard.h  StudentDashboard.ui  qt_main.cpp
include/: Administrator.h  AutentificareService.h  Catalog.h  Chestionar.h  ClientEdu.h  ConectorBazaDate.h  Curs.h  CursRepository.h  CursService.h  Evaluare.h  EvaluareRepository.h  EvaluareService.h  ExamenFinal.h  ExceptieEdu.h  INodRetea.h  IUtilizator.h  InscriereRepository.h  InscriereService.h  Jurnalizare.h  Lectie.h  LectieRepository.h  LectieService.h  LectieText.h  LectieVideo.h  ManagerSocket.h  Personal.h  Profesor.h  ProtocolEdu.h  ReguliAccesService.h  ServerEdu.h  SesiuneClient.h  Student.h  UtilizatorBaza.h  UtilizatorRepository.h
src/: Administrator.cpp  AutentificareService.cpp  Chestionar.cpp  ClientEdu.cpp  ConectorBazaDate.cpp  Curs.cpp  CursRepository.cpp  CursService.cpp  Evaluare.cpp  EvaluareRepository.cpp  EvaluareService.cpp  ExamenFinal.cpp  ExceptieEdu.cpp  INodRetea.cpp  InscriereRepository.cpp  InscriereService.cpp  Jurnalizare.cpp  Lectie.cpp  LectieRepository.cpp  LectieService.cpp  LectieText.cpp  LectieVideo.cpp  ManagerSocket.cpp  Personal.cpp  Profesor.cpp  ProtocolEdu.cpp  ReguliAccesService.cpp  ServerEdu.cpp  Student.cpp  UtilizatorBaza.cpp  UtilizatorRepository.cpp
tests/: TestComunicatieClientServer.cpp  TestCursuriDisponibile.cpp  TestEndToEndEduChain.cpp  TestIntegrareInscrieri.cpp  TestIntegrarePersistenta.cpp  TestIntegrareReteaEvaluari.cpp  TestIntegrareReteaIncercari.cpp  TestIntegrareReteaInscrieri.cpp  TestIntegrareReteaLectii.cpp  TestIntegrareReteaService.cpp  TestIntegrareService.cpp
